--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body * {
   letter-spacing: 0.5px;
 }
 
-body .wrapper {
+body #root {
   height: 100vh;
   width: 100%;
   background: #7554a0;
@@ -22,5 +22,9 @@ body .wrapper {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+body .wrapper {
+  max-width: 1366px;
 }
 /*# sourceMappingURL=App.css.map */
