--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,45 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-}
-
-body * {
+  padding: 0;
   font-family: Avenir, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   letter-spacing: 0.5px;
 }
 
-body #root {
-  height: 100vh;
-  width: 100%;
-  background: #7554a0;
-  background: -webkit-gradient(linear, left top, right top, color-stop(7%, #7554a0), color-stop(17%, #7554a0), color-stop(29%, #6a5fa8), color-stop(44%, #6367ae), color-stop(66%, #5774b8), color-stop(83%, #4687c6), color-stop(96%, #2ca3db), color-stop(100%, #16bced), to(#00d4ff));
-  background: linear-gradient(90deg, #7554a0 7%, #7554a0 17%, #6a5fa8 29%, #6367ae 44%, #5774b8 66%, #4687c6 83%, #2ca3db 96%, #16bced 100%, #00d4ff 100%);
-  display: -webkit-box;
-  display: -ms-flexbox;
+.home,
+.services,
+.products,
+.sign-up {
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  height: 90vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
 }
 
-body .wrapper {
-  max-width: 1366px;
+.services {
+  /* background-image: url('../public/images/img-2.jpg'); */
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
 }
-/*# sourceMappingURL=App.css.map */
+
+.products {
+  /* background-image: url('../public/images/img-1.jpg'); */
+  background-position: center;
+  background-size: fill;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
+}
+
+.sign-up {
+  /* background-image: url('../public/images/img-8.jpg'); */
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
+}
