--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,6 @@
 .footer-container {
-  background-color: #242424;
+  background-color: #000000;
+background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
   padding: 4rem 0 2rem 0;
   display: flex;
   flex-direction: column;
