--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -1,5 +1,20 @@
+.nav.white {
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(41,41,112,1) 35%, rgba(0,212,255,1) 100%);
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
+
+
+
 .navbar {
-  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  background-color: #000000;
+background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
   height: 80px;
   display: flex;
   justify-content: center;
